2009-08-16 Steve Bennett <steveb@workware.net.au>

	* jim.c: If an error occurs when {expand} is in operation, the line number is wrong.
	* jim.c/h: If an object is used in subst, then source, a crash will result
	* jimsh.c: A script exiting with 'exit 0' would not give a return code of 0
	* jim.c: Make [format %c 0] work (embedded nulls)
	* jim-array-1.0.tcl: array unset was broken
	* jim.c: Some recursion in unknown is OK, just not infinite recursion.
	* jimsh.c: $argv0 should be the name of the script
	* jim.c: Should be able to compare strings for order in expr
	* jim.c:  'unset ::var' to unset a global var.
 	It was doing nothing.

2008-11-06 Steve Bennett <steveb@workware.net.au>

	* jim.c: Implement info hostname by calling os.hostname
	* jim.c: Also fix some compiler warnings

2008-11-06 Steve Bennett <steveb@workware.net.au>

	* jim.c, jim.h: Improve error reporting, especially on package load

2008-11-06 Steve Bennett <steveb@workware.net.au>

	* jim.c, jim.h: Prevent infinite recursion if an unknown command is
	called from unknown

2008-11-06 Steve Bennett <steveb@workware.net.au>

	* jim-array-1.0.tcl: Add array command wrapper

2008-11-05 Steve Bennett <steveb@workware.net.au>

	* jim-glob-1.0.tcl, jim-readdir.c: Add readdir extension and glob package for glob command

2008-11-05 Steve Bennett <steveb@workware.net.au>

	* jim-glob-1.0.tcl, jim-readdir.c: Add readdir extension and glob package for glob command

2008-11-05 Steve Bennett <steveb@workware.net.au>

	* jim-regexp.c: Add regexp extension for regexp and regsub commands

2008-11-04 Uwe Klein <uklein@klein-messgeraete.de>
 
     * jim-hwio.c: file added
     * provides memory area and hardware access on linux i386

2008-11-05 Steve Bennett <steveb@workware.net.au>

	* jim.c: add support for proc default arguments to jim
	* jim.c: fix lazy expression evaluation with unary not

2008-11-04 Steve Bennett <steveb@workware.net.au>

	* jim.c: fix problems with "puts [list ${a}]". Resulted in syntax